<resources>
    <string name="app_name">NutriBot</string>


    <!--  labels for widgets -->
    <string name="heightLabel">Height</string>
    <string name="calculateButton">Calculate</string>
    <string name="EmptyString"></string>
    <string name="weightLabel">Weight</string>
    <string name="bmiLabel">Body Mass Index:</string>

    <!--  the BMI descriptions -->
    <string name="bmiNormal">Normal</string>
    <string name="bmiOver">Overweight</string>
    <string name="bmiUnder">Underweight</string>
    <string name="bmiSUnder">Severely Underweight</string>
    <string name="bmiObese">Obese</string>
    <string name="being_healthy_quote">Being healthy is a lifestyle not a diet!</string>
    <string name="infokurz">calculator example</string>


    <!--  Strings arrays used in Spinner widgets -->
    <string-array name="heightUnitsArray">
        <item >feet/inch</item>
        <item >m/cm</item>
    </string-array>
    <string-array name="weightUnitsArray">
        <item >lb</item>
        <item >kg</item>
    </string-array>

    <!--  Colors used to used in the labels and the backgrounds -->
    <color name="colorRed">#ff0000</color>
    <color name="colorYellow">#00ffff</color>
    <color name="colorGreen">#3661d9</color>
    <color name="colorPurple">#5fae54</color>
    <color name="colorBG">#bbeceb</color>
    <color name="black">#53ad67</color>

    <string name="title">7 Day Diet Meal Plan</string>
    <string name="button1">Day1</string>
    <string name="button2">Day2</string>
    <string name="button3">Day3</string>
    <string name="button4">Day4</string>
    <string name="button5">Day5</string>
    <string name="button6">Day6</string>
    <string name="button7">Day7</string>

    <string name="back_button">Back</string>
    <string name="main_button">Main Page</string>

    <string name="share">Share</string>
    <string name="about">About Us</string>

    <string name="recipe">Recipe</string>
    <string name="image_text">Hello</string>
    <string name="image">Image</string>

    <string name="breakfast">BREAKFAST</string>
    <string name="snack_m">MORNING SNACK</string>
    <string name="lunch">LUNCH</string>
    <string name="snack">AFTERNOON SNACK</string>
    <string name="dinner">DINNER</string>
    <string name="ingredientes">INGREDIENTS</string>
    <string name="preparation">PREPARATION</string>

</resources>
